wow, the indentions and formatting in *.[ch] was _terrible_.  this should
all be fixed now. yippie.

-------------------------------------------------------------------------------

Wed Mar 15 16:53:47 CST 2000
(dphase)

Why eat gobs of memory when you need to?  Now we can render an image with no
alpha channel and it will not render a checkerboard pixmap, its a waste of
resources to render an image that isnt really being used.

-------------------------------------------------------------------------------

Sun Mar 19 20:24:08 CST 2000
(dphase)

TONS of new stuff.  You'll notice that we no longer have menus when you
right click on the main window.  Now a cool looking controlling window pops
up that will manage all of the stuff in one organized place.  I have hacked
browser.c to pack the image browser into the controlling window now -- it
works _very_ well it looks great.  if anyone has any suggestions, let me
know, I like hearing from you.

-------------------------------------------------------------------------------

Fri May 5 11:31:47 CDT 2000
(dphase)

Wow, I'm actually committing something.  You should lose all those gtk+
errors except for one that I can't seen to track  down.  Let's have a
contest, see who can find the annoying gtk+ error first :)

Ok, nothing of to much importance, trying to get back into the swing of
things, working on the effects/filters panel and it is ugly as hell.  sorta
kinda getting there though.

-------------------------------------------------------------------------------

Fri May 5 18:35:36 CDT 2000
(dphase)

Added in a bunch of new panels and fixed a bug with GtkAdjustment in the
effects/filters panel - please not that the color modifie panels aren't
working yet

-------------------------------------------------------------------------------

Wed May 10 20:33:50 CDT 2000
(dphase)

Ok, setting the brightness levels works now, working on scaling now

-------------------------------------------------------------------------------
