@@ -57,12 +57,16 @@ browser_init(void)
   gtk_widget_show(cbtn);
   gtk_signal_connect(GTK_OBJECT(cbtn), "clicked",
 		     GTK_SIGNAL_FUNC(check_callback), NULL);
-  gtk_box_pack_start(GTK_BOX(hbox2), cbtn, TRUE, TRUE, 0);
+  gtk_box_pack_start(GTK_BOX(vbox2), cbtn, TRUE, TRUE, 0);
 	
+#if 0
+  /* What the heck was the point of this? :-)
+     BTW, hbox1 doesn't exist yet....  -- mej */
   vbox1 = gtk_vbox_new(FALSE, 0);
   gtk_box_pack_start(GTK_BOX(hbox1), vbox1, TRUE, TRUE, 0);
   gtk_widget_show(vbox1);
-	
+#endif
+
   gtk_widget_show(scroller);
   gtk_widget_show(hbox1);
   gtk_widget_show(hbox2);
